# forest

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
.github/workflows/: release.yml
homebrew/: README.md  forest.rb
nix/: example-hm-config.nix  fogo.bash  fogo.fish  home-manager-module.nix  nixos-module.nix
src/: application.rs  main.rs
src/commands/: clone.rs  create.rs  grow.rs  list.rs  nurture.rs  plant.rs  trim.rs
src/commands/roots/: \  clone.rs  enter.rs  exec.rs  list.rs
src/commands/trees/: create.rs  list.rs
src/config/: loader.rs  mod.rs
src/roots/: clone.rs  enter.rs  exec.rs  get.rs  list.rs  mod.rs
src/trees/: clean.rs  create.rs  delete.rs  exec.rs  get.rs  list.rs  mod.rs
src/utils/: cli_ui.rs  config.rs  exec.rs  git.rs  path.rs
