[package]
name = "forest"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A tool that manages worktrees for you"
homepage = "https://github.com/tcione/forest"
repository = "https://github.com/tcione/forest"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
directories = "6"
toml = "0.9"
regex = "1"
anyhow = "1"
thiserror = "2.0.16"
console = "0.16.1"
dialoguer = "0.12.0"

[dev-dependencies]
tempfile = "3.8"
